--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3'
 
 services:
   nodejs:
+    build:
+      context: .
+      dockerfile: Dockerfile
     #fill out the configuration here
     networks:
       - app-network
@@ -28,7 +31,7 @@ volumes:
     driver_opts:
       type: none
       #fill out your absolute path to your folder here
-      device: /absolute/path/to/web/template/folder
+      device: /home/chrx/programming/cmsc389t/cmsc389T-web-template/
       o: bind
 
 networks:
